<resources>
    <!--App-->
    <string name="app_name">Travel Wallet</string>

    <!--Main Activity-->
    <string name="main_travel_image_content_description">Travel Image</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>

    <!--Insert Travel Activity-->
    <string name="insert_activity_header_description">Let\'s create a new travel! Fill in the form below to start planning.</string>
    <string name="travel_name_label">Travel Name</string>
    <string name="total_budget_label">Total Budget</string>
    <string name="currency_label">Budget Currency</string>
    <string name="destination_label">Travel Destination</string>
    <string name="start_date_label">Travel Start Date</string>
    <string name="end_date_label">Travel End Date</string>
    <string name="travel_name_hint">Give a name to your travel!</string>
    <string name="total_budget_hint">Planned travel budget</string>
    <string name="start_date_hint">Choose travel start date</string>
    <string name="end_date_hint">Choose travel end date</string>
    <string name="button_add_travel">Create Travel</string>
    <string name="button_edit_travel">Save Changes</string>
    <string name="error_travel_name_required">Travel name is required!</string>
    <string name="error_travel_budget_required">Travel budget is required!</string>
    <string name="error_travel_budget_invalid">Invalid number!</string>
    <string name="error_travel_destination_required">Travel destination is required!</string>
    <string name="error_travel_start_date_required">Travel start date is required!</string>
    <string name="error_travel_end_date_required">Travel end date is required!</string>
    <string name="error_google_play_services_not_available">Google play services not available!!</string>
    <string name="toast_confirm_successful_travel_change">Changes saved!</string>
    <string name="toast_confirm_successful_travel_creation">New travel created!</string>
    <string name="content_description_map_button">Google Maps Button</string>

    <!--Travel Details Activity-->
    <string name="travel_details_header_description">Travel picture</string>
    <string name="travel_details_budget_overview_label">Budget Overview</string>
    <string name="travel_detail_total_budget_label">Total Spent:</string>
    <string name="travel_detail_total_budget_separator">/</string>
    <string name="travel_detail_total_expenses_label">Spent</string>
    <string name="travel_detail_expense_category_icon_description">Expense Category Icon</string>

    <!--Insert Expense Form Activity-->
    <string name="insert_expense_description_label">Expense Description</string>
    <string name="insert_expense_amount_label">Expense Amount</string>
    <string name="insert_expense_category_label">Category</string>
    <string name="insert_expense_date_label">Date</string>
    <string name="insert_expense_button_label">Create Expense</string>
    <string name="edit_expense_button_label">Save Changes</string>
    <string name="error_expense_description_required">Expense description required!</string>
    <string name="error_expense_amount_required">Expense amount required!</string>
    <string name="error_expense_amount_invalid">Invalid number!</string>
    <string name="error_expense_date_required">Expense date required!</string>
    <string name="toast_confirm_successful_expense_change">Changes saved!</string>
    <string name="toast_confirm_successful_expense_creation">New expense created!</string>
    <string name="category_item_hotel">Hotel</string>
    <string name="category_item_food_drink">Food &amp; Drink</string>
    <string name="category_item_shopping">Shopping</string>
    <string name="category_item_transport">Transport</string>
    <string name="category_item_entertainment">Entertainment</string>
    <string name="category_item_others">Others</string>
    <string-array name="expense_categories_array">
        <item>@string/category_item_hotel</item>
        <item>@string/category_item_food_drink</item>
        <item>@string/category_item_shopping</item>
        <item>@string/category_item_transport</item>
        <item>@string/category_item_entertainment</item>
        <item>@string/category_item_others</item>
    </string-array>

    <!--Widget-->
    <string name="widget_empty_string">No travels yet!</string>

    <!--Notification-->
    <string name="travel_notification_title">Let\'s Travel!</string>
    <string name="travel_notification_text">Your scheduled travel starts now. Don\'t forget to keep track of your expenses!</string>
    <string name="travel_notification_channel_name">travel_wallet_notifications</string>
    <string name="travel_notification_channel_description">Notifications from Travel Wallet App</string>

    <!--Misc-->
    <string name="content_description_popup_menu_button">Popup Menu</string>
</resources>
