<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".InsertExpenseFormActivity">

        <EditText
            android:id="@+id/et_expense_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/insert_expense_description_label"
            android:importantForAutofill="no"
            android:inputType="text|textShortMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/et_expense_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/insert_expense_amount_label"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_expense_description"
            app:layout_constraintTop_toBottomOf="@+id/et_expense_description"
            tools:ignore="Autofill" />

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_expense_amount"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_label" />

        <EditText
            android:id="@+id/et_expense_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/ic_date_range_grey_24dp"
            android:ems="10"
            android:hint="@string/insert_expense_date_label"
            android:inputType="date"
            android:focusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/sp_category"
            app:layout_constraintTop_toBottomOf="@+id/sp_category"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/bt_create_expense"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/insert_expense_button_label"
            app:layout_constraintEnd_toEndOf="@+id/et_expense_date"
            app:layout_constraintStart_toStartOf="@+id/et_expense_date"
            app:layout_constraintTop_toBottomOf="@+id/et_expense_date" />

        <TextView
            android:id="@+id/tv_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/insert_expense_category_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/et_expense_amount"
            app:layout_constraintTop_toBottomOf="@+id/et_expense_amount" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>